<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Time</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="clock">Clock</string>
    <string name="alarms">Alarms</string>
    <string name="timer">Timer</string>
    <string name="intervals">Intervals</string>
    <string name="settings">Settings</string>
    <string name="none">None</string>
    <string name="about">About</string>
    <string name="madeby">Made by beryleo</string>
    <string name="contact">Contact at beryleo@gmail.com</string>
    <string name="decimalplaces">Decimal Places</string>
    <string name="displayclock">Display clock at bottom?</string>
    <string name="minus">  -  </string>
    <string name="plus">  +  </string>
    <string name="topnavigation">Display buttons at top?</string>
    <string name="lap">Lap</string>
    <string name="reset">Reset</string>
    <string name="popupstopwatch">Popup stopwatch [beta]</string>
    <string name="newfont">Use new font?</string>
    <string name="remember">Remember data?</string>
    <string name="popupcredit">Uses the standout library, made by Mark Wei</string>
    <string name="popupcreditcontact">markwei@gmail.com</string>
    <string name="version">Time BETA</string>
    <string name="addalarm">Add an alarm</string>
    <string name="alarmeditor">Alarm Editor</string>
    <string name="alarmname">Alarm name</string>
    <string name="alarmon">Alarm on?</string>
    <string name="alarmdays">Which days? Or one time alarm?</string>
    <string name="alarmdayschange">Change days</string>
    <string name="alarmringtone">Alarm ringtone</string>
    <string name="alarmvibrate">Vibrating alert?</string>
    <string name="alarmringtonechange">Change ringtone</string>
    <string name="alarmadd">Add alarm</string>
    <string name="alarmdayeditor">Day Editor</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="alarmringtoneeditor">Ringtone Editor</string>
    <string name="returneditor">Return to editor?</string>
    <string name="alarmtimeeditor">Time Editor</string>
    <string name="ringtoneplay">Play ringtone</string>
    <string name="ringtoneset">Set ringtone</string>
    <string name="cancel">Cancel</string>
    <string name="addinterval">Add an interval alarm</string>
    <string name="currentringtoneis">Current ringtone is </string>
    <string name="startsceen">Starting screen</string>
    <string name="setuptimer">Setup timer</string>
    <string name="timernotsetup">Timer not setup</string>
    <string name="timername">Timer name</string>
    <string name="finish">Finish</string>
    <string name="addtopresettimer">Add to presets</string>
    <string name="timersetup">Timer Setup</string>
    <string name="presettimers">Preset Timers</string>
    <string name="usepreset">Use preset</string>
    <string name="deletealarm">Delete alarm</string>
    <string name="selectedringtoneat">Selected ringtone at </string>
    <string name="commacalled">, called </string>
    <string name="udpatealarm">Update alarm </string>
    <string name="updateintervalalarm">Update interval alarm</string>
    <string name="deletedalarm">Deleted alarm with id </string>
    <string name="ringtonesilent">Ringtone is silent</string>
    <string name="noringtone">No ringtone selected</string>
    <string name="addedalarm">Added alarm </string>
    <string name="updatedalarm">Updated alarm </string>
    <string name="at"> at </string>
    <string name="ringtoneis">, ringtone is </string>
    <string name="vibrateset">, vibrate is set to </string>
    <string name="silentset">, silent is set to </string>
    <string name="alarmerror">"One or more fields is not filled out, please inspect each page"</string>
    <string name="alarmscheduled">alarm scheduled</string>
    <string name="alarmreset">alarm reset</string>
    <string name="timerdone">Timer done</string>
    <string name="timerfinished">Timer has finished</string>
    <string name="noname">NO_NAME</string>
    <string name="app_name_square">Time (Square)</string>
    <string name="app_name_circle">Time (Circle)</string>
    <string name="app_name_roundedsquare">Time (Rounded Square)</string>
    <string name="app_name_intersections">Time (Intersections)</string>
    <string name="alarmrepeats">Times to repeat</string>
    <string name="repeatinfinitely">Repeat infinitely?</string>
    <string name="alarmdone">Alarm done</string>
    <string name="clocktype">Clock type</string>
    <string name="widget_square">Square</string>
    <string name="widget_circle">Circle</string>
    <string name="widget_roundedsquare">RoundSquare</string>
    <string name="widget_intersections">Intersection</string>
    <string name="settingupalarms">Setting up alarms</string>
    <string name="analogclockseconds">http://code.google.com/p/android-analog-clock/</string>
    <string name="displayseconds">Display seconds?</string>
    <string name="running">Running</string>
    <string name="hidden">Hidden</string>
    <string name="clicktorestore">Click to restore #</string>
    
</resources>