<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <com.beryleo.time.fontbutton
        android:id="@+id/setuptimerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/whitebutton"
        android:text="@string/setuptimer"
        android:textColor="@android:color/white" />

    <com.beryleo.time.fonttextview
        android:id="@+id/timertimetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timernotsetup"
        android:textColor="@android:color/white"  />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <com.beryleo.time.fontbutton
            android:id="@+id/startpausetimerbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:text="@string/start"
            android:textColor="@android:color/white" />

        <com.beryleo.time.fontbutton
            android:id="@+id/resettimerbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:text="@string/reset"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>