<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <com.beryleo.time.fonttextview
            android:id="@+id/alarmnametextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarmname" 
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/alarmnameedittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/alarmname" 
            android:background="@drawable/white_button"
            android:textColor="@android:color/white">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <com.beryleo.time.fonttextview
            android:id="@+id/alarmontextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmon" 
            android:textColor="@android:color/white"/>

        <com.beryleo.time.fonttogglebutton
            android:id="@+id/alarmontogglebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <com.beryleo.time.fonttextview
            android:id="@+id/alarmvibratetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmvibrate" 
            android:textColor="@android:color/white"/>

        <com.beryleo.time.fonttogglebutton
            android:id="@+id/alarmvibratetogglebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <com.beryleo.time.fontbutton
            android:id="@+id/alarmaddbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmadd"
            android:background="@drawable/whitebutton"
            android:textColor="@android:color/white"/>
        
        <com.beryleo.time.fontbutton
            android:id="@+id/alarmdeletebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:text="@string/deletealarm"
            android:textColor="@android:color/white" />

    </LinearLayout>
    

</LinearLayout>