<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <com.beryleo.time.fonttextview
            android:id="@+id/ringtoneidtextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <com.beryleo.time.fonttextview
            android:id="@+id/ringtonetitletextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

    <com.beryleo.time.fontbutton
        android:id="@+id/ringtoneplaybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ringtoneplay"
        android:background="@drawable/whitebutton"
        android:textColor="@android:color/white"/>

    <com.beryleo.time.fontbutton
        android:id="@+id/ringtonesetbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ringtoneset"
        android:background="@drawable/whitebutton"
        android:textColor="@android:color/white"/>

    <com.beryleo.time.fontbutton
        android:id="@+id/cancelbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/whitebutton"
        android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>